--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "fullsoak-bun-example",
-  "version": "1.3.1",
+  "version": "0.0.0",
   "author": "fullsoak",
   "main": "src/main.ts",
   "repository": {
     "url": "https://github.com/fullsoak/bun-examples.git"
   },
   "dependencies": {
-    "@fullsoak/fullsoak": "npm:@jsr/fullsoak__fullsoak@^0.8.0-alpha.13",
+    "@fullsoak/fullsoak": "npm:@jsr/fullsoak__fullsoak@^0.9.0",
     "preact": "npm:preact@^10.25.4",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat"
