--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/fullsoak/bun-examples.git"
   },
   "dependencies": {
-    "@fullsoak/fullsoak": "npm:@jsr/fullsoak__fullsoak@^0.9.0",
-    "preact": "npm:preact@^10.25.4",
+    "@fullsoak/fullsoak": "npm:@jsr/fullsoak__fullsoak@^0.10.0",
+    "preact": "npm:preact@^10.26.2",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat"
   },
@@ -18,7 +18,7 @@
     "start": "bun src/main.ts",
     "dev": "bun --watch src/main.ts",
     "test": "bun test",
-    "test:update": "bun test --update-snapshots"
+    "test-update": "bun test --update-snapshots"
   },
   "type": "module"
 }
